# tetris-bot-in-rust

./: Cargo.toml  LICENSE-APACHE  README.md  bot_config.json
src/: data.rs  lib.rs  main.rs  map.rs  movegen.rs  piece_map.rs  profiling.rs  sync.rs  tbp.rs  weights.json
src/bot/: freestyle.rs  mod.rs
src/dag/: known.rs  mod.rs  speculated.rs
src/eval/: evaluate.rs  features.rs  mod.rs  slots.rs  weights.rs
tests/: game_state_parity.rs  move_snapshots.rs  strength_harness.rs
tests/common/: mod.rs
tests/fixtures/: move_snapshots.json
