[package]
name = "tetrisBot"
version = "0.1.0"
edition = "2021"

[dependencies]
tetrisEngine = { path = "../tetrisEngine" }
ahash = "0.8"
bumpalo-herd = "0.1"
nohash = "0.2"
once_cell = "1"
ordered-float = "4"
ouroboros = "0.18"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
